--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -88,9 +88,13 @@ $mainColor: #201711;
                 }  
             }
             ~ .menu-cover {
-                display: block;
                 z-index: 50;
                 @include opacity(1);
+
+                a {
+                    //font-size: 50px;
+                    //@include opacity(1);
+                }
             }
         }
     }
@@ -146,13 +150,21 @@ $mainColor: #201711;
         left: 100px;
         top: 0;
         width: 100%;
+        @include heightFullScreen();
         z-index: -1;
+        overflow: hidden;
 
         @include opacity(0);
-        @include heightFullScreen();
-        @include bgImgCover('../img/general.jpg', 0);
-        @include transition(opacity, .3s, background-image, .5s);
-        transition-delay: .3s;
+
+        img {
+            overflow: hidden;
+            transform: scale(1.1); 
+            transition-delay: 2s;
+
+            &.img-zoom {
+                transform: scale(1);
+            }
+        }
 
         &:after {
             content: '';
@@ -166,15 +178,16 @@ $mainColor: #201711;
             z-index: 60;
         }
         .menu-nav-cover {
+            display: block;
             position: absolute;
             left: 0;
             top: 0;
-            display: inline-block;
+            overflow: hidden;
             width: 100%;
-            z-index: 65;
+            z-index: 70;
             h1 {
-                display: inline-block;
-                margin: 0 auto;
+                display: block;
+                margin: 35px auto;
                 width: 185px;
                 svg {
                     display: block;
@@ -186,49 +199,55 @@ $mainColor: #201711;
             > div {
                 width: 100%;
                 margin-left: 80px;
-            } 
-            .menu-nav {
-                margin-top: 100px;
                 a {
+                    @include opacity(0);
+                    transform: translateY(-15px);
+                }
+            } 
+            &.cover-show {
+                div {
+                    a {
+                        @include opacity(1);
+                        transform: translateY(0);
+                    }
+                }
+            }
+            .menu-nav {
+                a {
+                    padding: 20px 0;
                     width: 250px;
                     display: block;
-                    visibility: visible;
-                    font-size: 40px;
+                    font-size: 50px;
                     font-weight: 300;
                     color: $textColor;
-                    padding-bottom: 40px;
-                    @include transition(color, .3s);
+                    @include transition(color, .5s);
 
-                    &:hover {
-                        color: #e7e7e4;
-                    }
+                    &:hover { color: #e7e7e4; }
                 }
             }
             .menu-info {
-                margin-top: 60px;
+                margin-top: 30px;
                 a {
                     font-size: 20px;
+                    display: inline-block;
                     margin-right: 60px;
                     color: #e7e7e4;
-                    @include opacity(1);
-                    &:hover {
-                        color: #e7e7e4;
-                        @include opacity(.8);
-                    }
+                    @include opacity(0);
+                    @include transition(opacity, .5s);
+                    &:hover { @include opacity(.6); }
                 }
             }
             .menu-social {
-                margin-top: 60px;
-
+                margin-top: 50px;
                 a {
+                    display: inline-block;
+                    padding: 8px 0;
                     font-size: 20px;
                     color: hsla(60,6%,90%,.5);
-                    span {
-                        margin-left: 10px;
-                    }
+                    @include transition(opacity, .5s);
+                    span { margin-left: 8px; }
                     &:hover {
                         color: $textColor;
-                        @include opacity(.8);
                     }
                 }
             }
@@ -242,6 +261,7 @@ $mainColor: #201711;
     width: calc(100% - 100px);
     margin-left: 100px;
     height: auto;
+    z-index: 1;
 
     &:after {
         content: "";
@@ -252,7 +272,7 @@ $mainColor: #201711;
         height: 250px;
         background: linear-gradient(0deg, rgba(32,23,17,0), rgba(32,23,17,.9));
         display: block;
-        z-index: 5;
+        z-index: 10;
     }
     
     video, nav {
@@ -271,7 +291,7 @@ $mainColor: #201711;
     nav {
         display: flex;
         align-items: center;
-        z-index: 10;
+        z-index: 20;
         height: 60px;
         margin: 35px 0;
 
